[package]
name = "warframe"
version = "8.0.1"
edition = "2024"
description = "An async crate to wrap Warframe's Worldstate API."
readme = "./README.md"
documentation = "https://docs.rs/warframe"
homepage = "https://docs.rs/warframe"
repository = "https://github.com/Mettwasser/warframe.rs"
license = "MIT"
rust-version = "1.85"


[features]
default = ["market_ratelimit", "market_cache"]

full = ["market_ratelimit", "market_cache"]

market_ratelimit = ["dep:governor"]
market_cache = ["dep:moka"]

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde", "clock"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127" }
serde_repr = "0.1.19"
futures = "0.3.30"
thiserror = "2.0.11"
moka = { version = "0.12.8", optional = true, features = ["future"] }
urlencoding = "2.1.3"
derive_more = { version = "2.0.1", features = ["full"] }
serde_with = { version = "3.11.0" }
warframe-macros = { path = "warframe-macros", version = "8.0.1" }
paste = "1.0.15"
tracing = "0.1.41"
governor = { version = "0.10.0", optional = true }
derive_builder = "0.20.2"
heck = "0.5.0"

[dev-dependencies]
rstest = "0.25.0"
tracing-subscriber = "0.3.19"

[lints.clippy]
pedantic = "warn"

[workspace]
resolver = "3"
members = ["warframe-macros", "."]
