[package]
name = "warframe"
version = "9.0.0"
edition = "2024"
description = "An async crate to wrap Warframe's Worldstate API."
readme = "./README.md"
documentation = "https://docs.rs/warframe"
homepage = "https://docs.rs/warframe"
repository = "https://github.com/Mettwasser/warframe.rs"
license = "MIT"
rust-version = "1.91"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["market_ratelimit", "market_cache"]

full = ["market_ratelimit", "market_cache"]

market_ratelimit = ["dep:governor"]
market_cache = ["dep:moka"]

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.28", features = ["json"] }
chrono = { version = "0.4.42", features = ["serde", "clock"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148" }
serde_repr = "0.1.20"
futures = "0.3.31"
thiserror = "2.0.17"
moka = { version = "0.12.12", optional = true, features = ["future"] }
urlencoding = "2.1.3"
derive_more = { version = "2.1.1", features = ["full"] }
serde_with = { version = "3.16.1" }
warframe-macros = { path = "warframe-macros", version = "9.0.0" }
paste = "1.0.15"
tracing = "0.1.44"
governor = { version = "0.10.4", optional = true }
derive_builder = "0.20.2"
heck = "0.5.0"

[dev-dependencies]
rstest = "0.25.0"
tracing-subscriber = "0.3.22"

[lints.clippy]
pedantic = "warn"

[workspace]
resolver = "3"
members = ["warframe-macros", "."]
