[package]
name = "warframe-macros"
version = "8.0.1"
edition = "2024"
description = "Macros for the `warframe` crate."
readme = "../README.md"
documentation = "https://docs.rs/warframe"
homepage = "https://docs.rs/warframe"
repository = "https://github.com/Mettwasser/warframe.rs"
license = "MIT"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
manyhow = { version = "0.11.4" }
proc-macro2 = { version = "1.0.104" }
quote = { version = "1.0.42" }
syn = { version = "2.0.111", features = ["full"] }
