[package]
name = "listen_to_many_state_updates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warframe = { path = "../../", features = ["worldstate"] }
tokio = { version = "1.34.0", features = ["full"] }
env_logger = "0.11.1"
log = "0.4.20"